<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32sp"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/WelcomeToTheApp"
            android:textSize="24dp"
            android:textAlignment="center"
            android:layout_marginTop="16sp"/>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/burger"
            android:adjustViewBounds="true"
            android:layout_marginTop="16sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/PressToRecipeText"
            android:textSize="24dp"
            android:textAlignment="center"
            android:layout_marginTop="16sp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="getARecipe"
            android:text="@string/PressToRecipeButton"
            android:layout_marginTop="16sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/PressToCocktailText"
            android:textSize="24dp"
            android:textAlignment="center"
            android:layout_marginTop="16sp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="getACocktail"
            android:text="@string/PressToCocktailButton"
            android:layout_marginTop="16sp"/>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/logo"
            android:layout_margin="8sp"
            android:layout_gravity="center"/>


    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>